# TinyMsg

./: .gitignore  app.py  setup.cfg
templates/: messages.html
tinymsg/: __init__.py  cli.py  gui.py  tinymsg.py
tinymsg/templates/: messages.html
