[metadata]
name = tinyMsg
version = 0.1.0
description = A tiny HTTP message board
author = DamnDam
author_email = damien.thirion@proton.me

[options]
packages = find:
install_requires =
    flask>=2.0.0,<3.0.0
    flask-sqlalchemy>=3.0.0,<4.0.0

[options.package_data]
tinymsg = templates/*

[options.entry_points]
console_scripts =
    tinymsg = tinymsg:run