[metadata]
name = tinyMsg
version = 0.2.3
description = A tiny HTTP message board
author = DamnDam
author_email = damien.thirion@proton.me

[options]
packages = find:
install_requires =
    flask>=2.0.0,<3.0.0
    flask-sqlalchemy>=3.0.0,<4.0.0
    requests>=2.26.0,<3.0.0

[options.package_data]
tinymsg = templates/*, icon.ico

[options.entry_points]
console_scripts =
    tinymsg = tinymsg.cli:main
gui_scripts =
    tinymsg-gui = tinymsg.gui:main